Don't call SetCaputure() when starting dragging the floating keyboard.

When starting dragging, input events are already captured by the
keyboard window and calling SetCaputure() cancels current capture.

Bug: 795648
Test: By manual.
Change-Id: Ib3e8f651a54082ebb858bc37fb870001005cbec8
Reviewed-on: https://chromium-review.googlesource.com/831772
Reviewed-by: Blake O'Hare <blakeo@chromium.org>
Commit-Queue: Yuichiro Hanada <yhanada@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524939}